--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,79 @@
 @import url('./reset.css');
 
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #000;
+    color: #fff;
+}
+.wrapper {
+    min-height: 100%;
+    overflow: clip;
+}
+.page {
+    position: absolute;
+    width: 100%;
+    min-height: 100vh;
+    top: 0;
+    left: 0;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.slider {
+    overflow: hidden;
+    flex: 1 1 auto;
+}
+
+.slider__wrapper {
+    display: flex;
+}
+
+.slider__slide {
+    flex-shrink: 0;
+}
+.slide {
+}
+
+.slide__body {
+    width: 60vh;
+    margin: 0 auto;
+    max-width: 90vw;
+    box-shadow: 0 0 1.875rem rgba(0, 0, 0, 0.5);
+}
+.slide__image {
+    padding-bottom: 120%;
+    position: relative;
+    cursor: pointer;
+}
+.slide-picture {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+}
+.slider__scrolbar {
+    position: absolute;
+    width: 100%;
+    height: .3125rem;
+    bottom: 0;
+    left: 0;
+    opacity: 0.5;
+}
+.slider__scrolbar:hover,
+.slider__scrolbar:active {
+    opacity: 0.8;
+    height: 0.9375rem;
+}
+.slider__scrolbar .slider-scrolbar-drag {
+    opacity: 1;
+    cursor: pointer;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #fff;
+}
