--- a/css/style.css
+++ b/css/style.css
@@ -155,3 +155,13 @@ body{
         max-width: 48vw;
     }
 }
+/* ---------- */
+
+.open-image {
+    cursor: pointer;
+}
+.text.active {
+    transform: translate(-50%, 100%);
+    opacity: 0;
+    
+}
